# edorifile-explorer

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ContextMenu.tsx  Dialog.tsx  FileGrid.tsx  FileList.tsx  PropertiesDialog.tsx  Sidebar.tsx  TabBar.tsx  Toolbar.tsx  index.ts
src/components/common/: Dialog.tsx  PropertiesDialog.tsx  WindowControls.tsx  index.ts
src/components/file-browser/: FileGrid.tsx  FileItem.tsx  FileList.tsx  Thumbnail.tsx  index.ts
src/components/layout/: PreviewPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  TreeItem.tsx  index.ts
src/hooks/: index.ts  useContextMenu.ts  useFileOperations.ts  useKeyboardNavigation.ts  useKeyboardShortcuts.ts  useThumbnail.ts
src/services/: fileService.ts  index.ts  systemService.ts  thumbnailService.ts
src/store/: appStore.ts  clipboardStore.ts  folderPrefsStore.ts  index.ts  tabStore.ts
src/types/: clipboard.types.ts  file.types.ts  index.ts  tab.types.ts
src/utils/: format.ts  icons.tsx
