[package]
name = "edorifile-explorer"
version = "0.1.0"
description = "A modern file explorer for Windows 11"
authors = ["Edgar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"
